Added all my static pages. Whats next?

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<!DOCTYPE html>
+<h1>Contact</h1>
+<p>
+ The feedback page!
+</p>
