--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -3,23 +3,23 @@
 }
 
 body {
-  background: #cff;
+  background: #E6CCFF;
 }
 
 header {
-  padding-top: 20px;
+  padding-top: 5px;
 }
 
 header img {
-  padding: 1em;
-  background: #fff;
+  padding: 12px;
+  background: #FFFFFF;
 }
 
 section {
   margin-top: 1em;
   font-size: 120%;
   padding: 20px;
-  background: #fff;
+  background: #FFFFFF;
 }
 
 section h1 {
@@ -49,7 +49,7 @@ nav {
 }
 
 nav {
-  background-color: white;
+  background-color: #FFFFFF;
   padding: 0 0.7em;
   white-space: nowrap;
 }
@@ -81,9 +81,12 @@ nav ul li a:hover {
 /* Round corners */
 
 .round {
-  -moz-border-radius:    10px;
-  -webkit-border-radius: 10px;
-  border-radius:         10px;
+  -moz-border-radius:    7px;
+  -webkit-border-radius: 7px;
+  border-radius:         7px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #C98FFF;
 }
 
 footer {
