--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -169,6 +169,14 @@ div.field, div.actions {
   font-size: 12px;
   list-style: square;
 }
+
+ul.users {
+  margin-top: 1em;
+}
+
+.users li {
+  list-style: none;
+}
 /* Sign up button */
 /*
 a.signup_button {
